# rules_go_pkgsite

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  gopackagesdriver.sh  other.go  svc.proto
cmd/run-something/: BUILD.bazel  main.go
