load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:prefix github.com/fardream/rules_go_pkgsite
# gazelle:proto package
# gazelle:proto_group go_package
gazelle(name = "gazelle")

proto_library(
    name = "rules_go_pkgsite_proto",
    srcs = ["svc.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "rules_go_pkgsite_go_proto",
    importpath = "github.com/fardream/rules_go_pkgsite",
    proto = ":rules_go_pkgsite_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "rules_go_pkgsite",
    srcs = ["other.go"],
    embed = [":rules_go_pkgsite_go_proto"],
    importpath = "github.com/fardream/rules_go_pkgsite",
    visibility = ["//visibility:public"],
)
